@@ -1,7 +1,7 @@
 from Foundation import NSObject
 from InfoWindowController import InfoWindowController
-from nibwrapper import ToDoAppDelegateBase
+from AppKit.NibClassBuilder import AutoBaseClass
 
-class ToDoAppDelegate (ToDoAppDelegateBase):
+class ToDoAppDelegate (AutoBaseClass):
 	def showInfo_(self, sender):
 		InfoWindowController.sharedInfoWindowController().showWindow_(sender)
